--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 <p> The “Freedom Project” for SEP10 is all about creating an innovative invention that helps/benefits your ideal career. The purpose of this blog is to brainstorm ideas, create a process and show off your innovation while using skills you learned. For my project, I am making a website about a smart desk for teaching using HTML, CSS, and Github. This blog will walk through my process of independently studying a teaching career, real world problems, electronics and making the website. <p>
 <h2> Okay, what IS my innovation? <h2>
 <p> I want to help support kids with learning disabilities, in ways we adapt to them instead of seperating. They deserve to be with the wholeclass, which is why I thought of the smart desk. The issue my innovation is going to try to solve is comprehension and concentration struggles among students. According to a study, concentration issues are very common for students with issues like ADHD, Anxiety, OCD or learning disorders. However, children can also just get distracted easily or struggle to concentrate without these issues. My innovation can also help support students who struggle with staying on task, seeing from afar, hearing and advocating. Issues with focusing affects comprehension. </p>
+<br>
+<p>I chose this topic because I am very passionate about teaching. I want to work with young kids and I think teaching at a young age is important because thier minds develop young and I want to support them. I also chose this topic because I know what it's like to struggle paying attention and comprehending. In addition, I'm also shy so an innovation that can help would be better than constantly raising my hand for extra help. My innovation is a smart desk. This desk has many features to support these students. These features are…</p>
+<ol>
+  <li>A live computer, this is linked to the teachers smartboard via bluetooth that shows the student exactly what's on the smartboard, but directly in front of them.This is a medium screen standing straight up on the desk</li>
+  <li>A testing mode, students can pull up a built-in border that goes around the desk. This prevents the students from getting distracted while working or taking a test, as well as reducing cheating.</li>
+  <li>A built in calculator and spell checker on the side of the desk. As well as Noise canceling headphones and a feature where the computer reads aloud. This also plays live audio during the lesson. The teacher has a small microphone that is connected to these speakers via bluetooth.</li>
+  <li>A check in light. The teacher can ask the class if they are following and the student presses red for no/need help and green for yes, im okay. The student can also change their color during independent work.</li>
+  <li>A response board that a teacher can see. This board faces the teacher, and is located on the opposite side of the student's live computer. The student can type their response/question for the teacher to see instead of saying it out loud.</li>
+</ol>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
         <script src="script.js"></script>
         <script>
