--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
        <h1> The Smart Desk.<h1>
 <h5> sep10-freedom-project <h5>
  <hr size="8" width="90%" color="black"> 
-<h2> What exactly IS a freedom project?<h2>
+<h3> What exactly IS a freedom project? </h3>
 <p> The “Freedom Project” for SEP10 is all about creating an innovative invention that helps/benefits your ideal career. The purpose of this blog is to brainstorm ideas, create a process and show off your innovation while using skills you learned. For my project, I am making a website about a smart desk for teaching using HTML, CSS, and Github. This blog will walk through my process of independently studying a teaching career, real world problems, electronics and making the website. <p>
-<h2> Okay, what IS my innovation? <h2>
+<h3> Okay, what IS my innovation? </h3>
 <p> I want to help support kids with learning disabilities, in ways we adapt to them instead of seperating. They deserve to be with the wholeclass, which is why I thought of the smart desk. The issue my innovation is going to try to solve is comprehension and concentration struggles among students. According to a study, concentration issues are very common for students with issues like ADHD, Anxiety, OCD or learning disorders. However, children can also just get distracted easily or struggle to concentrate without these issues. My innovation can also help support students who struggle with staying on task, seeing from afar, hearing and advocating. Issues with focusing affects comprehension. </p>
 <br>
 <p>I chose this topic because I am very passionate about teaching. I want to work with young kids and I think teaching at a young age is important because thier minds develop young and I want to support them. I also chose this topic because I know what it's like to struggle paying attention and comprehending. In addition, I'm also shy so an innovation that can help would be better than constantly raising my hand for extra help. My innovation is a smart desk. This desk has many features to support these students. These features are…</p>
@@ -36,7 +36,10 @@
   <br>
   <li>A response board that a teacher can see. This board faces the teacher, and is located on the opposite side of the student's live computer. The student can type their response/question for the teacher to see instead of saying it out loud.</li>
 </ol>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+<h3 >What is my goal?</h3>
+<p2> Based on <a href=https://dialogical.net/blog/learning-disabilities-statistics/>statistics</a>, around 5-9% of the general population has a learning disability. 9.4% of children in the US have been diagnosed with ADHD. 14% of all public school students receive special education services. As these numbers are greatly increasing, my goal is to help give every student the same support system, so nobody feels an outcast, but everyone is getting thier unique support.</p2>
+     <br> 
+       <img src="https://ggsc.s3.amazonaws.com/images/uploads/How_to_Help_Students_with_Learning_Disabilities_Focus_on_Their_Strengths.jpg">
         <script src="script.js"></script>
         <script>
         
