--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <p> I want to help support kids with learning disabilities, in ways we adapt to them instead of seperating. They deserve to be with the wholeclass, which is why I thought of the smart desk. The issue my innovation is going to try to solve is comprehension and concentration struggles among students. According to a study, concentration issues are very common for students with issues like ADHD, Anxiety, OCD or learning disorders. However, children can also just get distracted easily or struggle to concentrate without these issues. My innovation can also help support students who struggle with staying on task, seeing from afar, hearing and advocating. Issues with focusing affects comprehension. </p>
 <br>
 <p>I chose this topic because I am very passionate about teaching. I want to work with young kids and I think teaching at a young age is important because thier minds develop young and I want to support them. I also chose this topic because I know what it's like to struggle paying attention and comprehending. In addition, I'm also shy so an innovation that can help would be better than constantly raising my hand for extra help. My innovation is a smart desk. This desk has many features to support these students. These features are…</p>
-<ol>
-  <li>A live computer, this is linked to the teachers smartboard via bluetooth that shows the student exactly what's on the smartboard, but directly in front of them.This is a medium screen standing straight up on the desk</li>
+<ol class=pink-background>
+  <li >A live computer, this is linked to the teachers smartboard via bluetooth that shows the student exactly what's on the smartboard, but directly in front of them.This is a medium screen standing straight up on the desk</li>
   <br>
   <li>A testing mode, students can pull up a built-in border that goes around the desk. This prevents the students from getting distracted while working or taking a test, as well as reducing cheating.</li>
  <br>
@@ -37,9 +37,10 @@
   <li>A response board that a teacher can see. This board faces the teacher, and is located on the opposite side of the student's live computer. The student can type their response/question for the teacher to see instead of saying it out loud.</li>
 </ol>
 <h3 >What is my goal?</h3>
-<p2> Based on <a href=https://dialogical.net/blog/learning-disabilities-statistics/>statistics</a>, around 5-9% of the general population has a learning disability. 9.4% of children in the US have been diagnosed with ADHD. 14% of all public school students receive special education services. As these numbers are greatly increasing, my goal is to help give every student the same support system, so nobody feels an outcast, but everyone is getting thier unique support.</p2>
+<p2> Based on <a href=https://dialogical.net/blog/learning-disabilities-statistics/>statistics</a>, around 5-9% of the general population has a learning disability. 9.4% of children in the US have been diagnosed with ADHD. 14% of all public school students receive special education services. As these numbers are greatly increasing, my goal is to help give every student the same support system, so nobody feels an outcast, but everyone is getting thier <u>unique</u> support.</p2>
      <br> 
        <img src="https://ggsc.s3.amazonaws.com/images/uploads/How_to_Help_Students_with_Learning_Disabilities_Focus_on_Their_Strengths.jpg">
+       <p3>There is more digital support than physical such as text to speech and <a herf= "https://www.readingrockets.org/article/assistive-technology-kids-learning-disabilities-overview">downloadable support systems.</a>As for real life, most common support is seperate classrooms or teachers and fidgets, but I would like to create something bigger and more impactful. Why should these students feel left out, or seperate from the others? Having all the support in one desk can ame a difference. I can use some of the pre-existing features at my desk, and incorporate some ideas such as text to speech features, spell correct. My goal is to create something to keep all kids feeling equal, regarless on how they learn. My smart desk can be used by everyone, so if everyone in the class has a smart desk, nobody will feel left out and will be supported in thier own way. I belivie no two kids learn the same, so its important to have as many resources in one spot as possible.</p3>
         <script src="script.js"></script>
         <script>
         
