--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <ol class=pink-background>
   <li >A live computer, this is linked to the teachers smartboard via bluetooth that shows the student exactly what's on the smartboard, but directly in front of them.This is a medium screen standing straight up on the desk</li>
   <br>
-  <li>A testing mode, students can pull up a built-in border that goes around the desk. This prevents the students from getting distracted while working or taking a test, as well as reducing cheating.</li>
+  <li>A testing mode, students can pull up a built-in border that goes around the desk as well as locking the search engine. This prevents the students from getting distracted while working or taking a test, as well as reducing cheating.</li>
  <br>
   <li>A built in calculator and spell checker on the side of the desk. As well as Noise canceling headphones and a feature where the computer reads aloud. This also plays live audio during the lesson. The teacher has a small microphone that is connected to these speakers via bluetooth.</li>
   <br>
@@ -41,9 +41,41 @@
      <br> 
        <img src="https://ggsc.s3.amazonaws.com/images/uploads/How_to_Help_Students_with_Learning_Disabilities_Focus_on_Their_Strengths.jpg">
        <p3> There is more digital support than physical such as text to speech and <a herf= "https://www.readingrockets.org/article/assistive-technology-kids-learning-disabilities-overview">downloadable support systems.</a>As for real life, most common support is seperate classrooms or teachers and fidgets, but I would like to create something bigger and more impactful. Why should these students feel left out, or seperate from the others? Having all the support in one desk can ame a difference. I can use some of the pre-existing features at my desk, and incorporate some ideas such as text to speech features, spell correct. My goal is to create something to keep all kids feeling equal, regarless on how they learn. My smart desk can be used by everyone, so if everyone in the class has a smart desk, nobody will feel left out and will be supported in thier own way. I belivie no two kids learn the same, so its important to have as many resources in one spot as possible.</p3>
+    <h3 >How does my smartdesk compare to other innovations?</h3>
+    <p2>Not only have I incorperated my own idea's, i have gotten insperation from methods Ive seen growing up, and researching online. But how is my innovation a solution, and better than others?</p2>
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col"><h1>Existing Innovations</h1><br><ol>
+  <li>You can download literacy Tools, Organizers and writing Tools to your browser. </li>
+  <li>This can be plenty of downloads, which may stop working or slow down your computer.</li>
+  <li>You might be the only student using this tool with headphones, making you feel left out.</li>
+   <li>Highlighting features</li>
+    <li>Not being able to focus on the teacher and your screen</li>
+     <li>Having limited features due to membership requirements or paying</li>
+     <li>Not being able to completely customize your learning experience</li>
+     <li>Most tools are for reading and writeing but limited to beyond that.</li>
+     <li>Can be limited to what it reads or translates</li>
+</ol></div>
+        <div class="col"><h1>VS</h1></div>
+        <div class="col"><h1>My SmartDesk</h1><ol>
+            <li>Has plenty of Read and write support systems, that you can customize</li>
+            <li>You can still download pre existing systems, and toggle the ones you want active in a menu </li>
+            <li>having highlighters, notes and calculators for all types of math</li>
+            <li>Having headphones already hooked up to the desk</li>
+            <li>Having the computer screen linked to the teachers, so you wont have to be left behind durring their lesson.</li>
+            <li>Offering non-verbal help and check ins which the teacher can see, communication without having to talk.</li>
+            <li>Linking the headphones to a small microphone, which the teacher can wear. This can help students hear clearly.</li>
+            <li>Having monitored internet access</li>
+           <li>Helps test preformance, and can be used without cheating.</li>
+           <li>Gives a personalized experience all in one desk, helping the child feel in control of thier learning</li>
+        </ol>
+    </div>
+</div>
+<h2>Even though both options are helpful, the Smartdesk has more features, which leads to more success. As technology evolves, so should classrooms.</h2>
+<img src=https://images.squarespace-cdn.com/content/v1/5bb507377a1fbd4eba7f8b67/1544129491096-7VUDC4FHLESKMCBMZQBB/ke17ZwdGBToddI8pDm48kNVz6pOaXkMSPSmzkYSDbmAUqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYy7Mythp_T-mtop-vrsUOmeInPi9iDjx9w8K4ZfjXt2dnMAOz_L9Hay_qRlTqjNUvhasfBJxf50e6bgKF0_n_hZZtJ3qR9G2BYeA0wOAaeYNg/oldschool-newschool.jpg?format=1500w>
         <script src="script.js"></script>
         <script>
-        
+    
             // JS
         </script>
     </body>
